--- a/views/menu/insertMenu.ejs
+++ b/views/menu/insertMenu.ejs
@@ -11,38 +11,223 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/menu.css" />
+
+
+    <!-- JQUERY AUTOCOMPLETE -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
+
 </head>
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
     <div class="container">
-        <h1><%= items.myObject.dish.title %></h1>
+        <h1><%= items.myObject.menu.title %></h1>
         <%- include ("../partials/message.ejs"); %>
-
+        
         <div class="card">
-            <form method="POST" , action='./insert'>
+            <form method="POST" , id="aux" action='./insert'>
                 <br>
                 <% for (var i=0; i< items.myObject.menu.form.length; i++) { %>
                 <label><%= items.myObject.menu.form[i].label %></label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                        <span class=" spanColor input-group-text" id="basic-addon1"><i
-                                class="  <%= items.myObject.menu.form[i].icon %>"></i></span>
+
+                        <span class=" spanColor input-group-text"><i
+                                class=" <%= items.myObject.menu.form[i].icon %>"></i></span>
+
                     </div>
                     <input type="<%= items.myObject.menu.form[i].type %>" class="form-control"
                         placeholder="<%= items.myObject.menu.form[i].placeholder %>"
                         aria-label="<%= items.myObject.menu.form[i].ariaLabel %>" aria-describedby="basic-addon1"
-                        name="<%= items.myObject.menu.form[i].name %>" #<%= items.myObject.menu.form[i].name %>>
+                        name="<%= items.myObject.menu.form[i].name %>" #<%= items.myObject.menu.form[i].name %>
+                        required>
                 </div>
                 <% } %>
+                <br>
 
+                <div class="cardInside">
+                    <div class="ref">
+                        <div class="row">
+                 
+                    <% for (var i=0; i< items.myObject.menu.formPlatos.length; i++) { %>
+                    <label class="myLabels"><%= items.myObject.menu.formPlatos[i].label %></label>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+
+                            <span class=" spanColor input-group-text"><i
+                                    class="myIcons <%= items.myObject.menu.formPlatos[i].icon %>"></i></span>
+
+                        </div>
+                        <input type="<%= items.myObject.menu.formPlatos[i].type %>" class="searchDish MyInputs form-control"
+                            placeholder="<%= items.myObject.menu.formPlatos[i].placeholder %>"
+                            aria-label="<%= items.myObject.menu.formPlatos[i].ariaLabel %>"
+                            aria-describedby="basic-addon1" name="<%= items.myObject.menu.formPlatos[i].name %>"
+                            #<%= items.myObject.menu.formPlatos[i].name %> required>
+                    </div>
+                    <% } %>
+                    <br>
+                </div>
+            </div>
+
+
+                </div>
+                <br>
+                <input type="button" value="Añadir plato" id="bSubmit">
+                
         </div>
+
+        <script>
+
+            const bSubmit = document.querySelector('#bSubmit');
+            bSubmit.addEventListener('click', () => {
+                const ing = document.querySelector('.searchDish');
+                const inputs = document.querySelectorAll(".MyInputs");
+                const myLabels = document.querySelectorAll(".myLabels");
+                const myIcons = document.querySelectorAll(".myIcons");
+                console.log(myIcons)
+                console.log(inputs)
+                console.log(myLabels)
+                createNewInputs(inputs, myLabels, myIcons);
+            });
+
+            function createNewInputs(inputs, myLabels, myIcons) {
+                const padre = document.querySelector(".ref");
+                const divRow = document.createElement("DIV");
+                let k = 0;
+                for (let i = 0; i < myLabels.length; i++) {
+                    const col = document.createElement("DIV");
+                    const aLabel = document.createElement("LABEL");
+                    console.log(myLabels[i].innerHTML)
+                    aLabel.innerHTML = myLabels[i].innerHTML;
+                    col.appendChild(aLabel);
+
+                    const divInputGroup = document.createElement("DIV");
+                    divInputGroup.classList.add("input-group");
+                    divInputGroup.classList.add("mb-3")
+                    const divInputGroupPrepend = document.createElement("DIV");
+                    divInputGroupPrepend.classList.add("input-group-prepend");
+
+                    const spanIcon = document.createElement("SPAN");
+                    spanIcon.classList.add("spanColor");
+                    spanIcon.classList.add("input-group-text");
+
+                    let icon = document.createElement("ICON");
+
+
+                    for (let j = 0; j < myIcons[i].classList.length; j++) {
+                        icon.classList.value += myIcons[i].classList[j] + " ";
+                    }
+
+                    spanIcon.appendChild(icon);
+                    divInputGroupPrepend.appendChild(spanIcon);
+                    divInputGroup.appendChild(divInputGroupPrepend);
+
+
+                    const newI = document.createElement("INPUT");
+
+                    newI.setAttribute("type", inputs[i].type);
+                    newI.setAttribute("placeholder", inputs[i].placeholder);
+                    newI.setAttribute("name", inputs[i].name);
+                    newI.classList.add("searchDish");
+             
+
+                    newI.classList.add("form-control");
+                    newI.classList.add("ui-autocomplete-input");
+                    divInputGroup.appendChild(newI);
+                    col.appendChild(divInputGroup);
+                    col.classList.add("col-sm");
+                    divRow.appendChild(col);
+
+                }
+
+                divRow.classList.add("row");
+                padre.appendChild(divRow);
+            };
+
+
+
+
+        </script>
+
+
         <br><br>
-        <form method="POST" , action='./insert'>
+        <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
+        <script>
+            $(function () {
+                $(".searchDish").autocomplete({
+                    source: function (req, res) {
+                        $.ajax({
+                            url: "insert/autocomplete/",
+                            dataType: "jsonp",
+                            type: "GET",
+                            data: req,
+                            success: function (data) {
+                                res(data);
+                            },
+                            error: function (err) {
+                                console.log(err);
+                            }
+                        });
+                    },
+                    minLength: 1,
+                    select: function (event, ui) {
+                        console.log(event);
+                        console.log(ui);
+                        if (ui.item) {
+                            $('.searchDish').text(ui.item.label);
+
+                        }
+                    }
+                })
+            });
+        </script>
+         <script>
+            $("#bSubmit").on("click", () => {
+                $(".searchDish").autocomplete({
+                    source: function (req, res) {
+                        $.ajax({
+                            url: "insert/autocomplete/",
+                            dataType: "jsonp",
+                            type: "GET",
+                            data: req,
+                            success: function (data) {
+                                res(data);
+                            },
+                            error: function (err) {
+                                console.log(err);
+                            }
+                        });
+                    },
+                    minLength: 1,
+                    select: function (event, ui) {
+                        console.log(event);
+                        console.log(ui);
+                        if (ui.item) {
+                            $('.searchDish').text(ui.item.label);
+
+                        }
+                    }
+                })
+            });
+        </script>
+
+        </form>
+
+
+
+        <form method="POST" id="search" , action='./insert'>
             <div class="wrap">
                 <div class="search">
                     <input type="text" name="shrt_desc" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
@@ -52,36 +237,34 @@
                     </button>
                 </div>
             </div>
-            <br>
-
-
-            <table class="table table-bordered table-hover table-sm">
-                <caption>Lista de alimentos</caption>
-                <thead>
-                    <tr>
-                        <th> CheckBox </th>
-                        <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
-                        <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
-                        <% } %>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <% for (var i=0; i< items.myDocs.length; i++) { %>
-                    </tr>
-                    <td> <input type="checkbox" name="group[]" value="<%= items.myDocs[i].shrt_desc %>"> </td>
-                    <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
-                    <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
-                    <% } %>
-
-                    <% } %>
-                </tbody>
-            </table>
-            <br><br>
-            <input type="submit" name="submit" class="btn btn-info" value="Submit" />
         </form>
-        </form>
+        <br>
+        <br>
+
+
+        <% const  nombres_sz=  items.myObject.tablaPlatosReducida.nombres.length %>
+        <% const  nombres=  items.myObject.tablaPlatosReducida.nombres %>
+        <% const  docs_sz =   items.myDocs.length %>
+        <% const  docs =   items.myDocs %>
+
+
+        <table class="table table-striped table-bordered table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <% for (var i=0; i< nombres_sz; i++) { %>
+                    <th scope="col"><%= nombres[i] %></th>
+                    <% } %>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <% for (var i=0; i < docs_sz; i++) { %>
+                    <td> <%= docs[i]._id %> </td>
+                    <td> <%= items.myKcal[i] %> </td>
+                </tr>
+                <% } %>
+            </tbody>
+        </table>
 
     </div>
     <%- include ("../partials/footer.ejs"); %>
