--- a/views/menu/getMenu.ejs
+++ b/views/menu/getMenu.ejs
@@ -73,7 +73,7 @@
                     <td><%= items.myNutrientsMenu[i][1] %> </td>
                     <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/menu/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
                         <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                        <button type="button" class="btn btn-warning"><a title="Editar" href="#"><i class="fas fa-edit"></i></a></button></td> 
+                        <button type="button" class="btn btn-warning"><a title="Editar" href="/menu/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td> 
                     </td>
                 </tr>
                 <% } %>
