--- a/views/menu/updateMenu.ejs
+++ b/views/menu/updateMenu.ejs
@@ -33,7 +33,8 @@
 <body>
     <%- include ("../partials/navigation.ejs"); %>
     <div class="container">
-        <h1><%= items.myObject.menu.title %></h1>
+        <h1><%= items.myObject.menu.update %></h1>
+        <h2><%= items.myMenu._id %></h2>
         <%- include ("../partials/message.ejs"); %>
         
         <div class="card">
